@startuml

interface State {
    +void handle(Decider decider, boolean rooms)
}

class Decider {
    -State state
    +void setState(State state)
    +void start(boolean rooms)
}

class Booking {
    +void book()
}

class BookingState {
    +void handle(Decider decider, boolean rooms)
}

class FindNewBookingState {
    +void handle(Decider decider, boolean rooms)
}

class FindNewBooking {
    +void bookingReplacement()
}

class BookingController {
    +String checkAvailability(String hotelId, String checkin, String checkout)
}

State <|.. BookingState
State <|.. FindNewBookingState

Decider o-- State
Decider ..> BookingState
Decider ..> FindNewBookingState

BookingState ..> Booking
FindNewBookingState ..> FindNewBooking

BookingController ..> Decider

@enduml